--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "ENV_FILE=./config/.env.prod nest start",
+    "start:dev": "ENV_FILE=./config/.env.dev nest start --watch",
+    "start:debug": "ENV_FILE=./config/.env.dev nest start --debug --watch",
+    "start:prod": "ENV_FILE=./config/.env.prod node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test": "ENV_FILE=./config/.env.test jest",
+    "test:watch": "ENV_FILE=./config/.env.test jest --watch",
+    "test:cov": "ENV_FILE=./config/.env.test jest --coverage",
+    "test:debug": "ENV_FILE=./config/.env.test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "ENV_FILE=./config/.env.test jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -26,18 +26,23 @@
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.0",
+    "@types/winston": "^2.4.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "dotenv-extended": "^2.9.0",
+    "dotenv-parse-variables": "^2.0.0",
     "mongodb-memory-server": "^8.9.1",
     "mongoose": "^6.5.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/dotenv-parse-variables": "^2.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
     "@types/node": "^16.0.0",
@@ -76,6 +81,9 @@
     "coveragePathIgnorePatterns": [
       "src/app.module.ts",
       "src/main.ts"
-    ]
+    ],
+    "moduleNameMapper": {
+      "@exmpl/(.*)": "<rootDir>/$1"
+    }
   }
 }
