--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,5 +33,5 @@ jobs:
     - name: Test
       run: yarn test
     
-    - name: Running e2e testing
-      run: yarn test:e2e
+#    - name: Running e2e testing
+#      run: yarn test:e2e
