--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -2,48 +2,30 @@ name: e2e
 
 on:
   push:
-    paths-ignore:
-      - "docs/**"
-    branches:
-      - master
-      - release/*
+    branches: [ "main" ]
   pull_request:
-    types:
-      - opened
-      - synchronize
-      - reopened
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [16.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Setup NodeJS
-        uses: actions/setup-node@v3
-        with:
-          node-version: "16"
-
-      - name: Cache Node.js modules
-        uses: actions/cache@v3
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.OS }}-node-
-            ${{ runner.OS }}-
-      - run: npm install  --registry=https://registry.npmjs.org
-      - name: Running mongodb service
-        run: |
-          docker-compose up -d mongodb
-          docker ps -a
-
-      # install dependencies and build the project
-      #- name: Running e2e testing
-      #  run: |
-      #    export SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }}
-      #    npm run test:e2e -- --runInBand --forceExit
-
-      - name: Running e2e testing
-        run: yarn test:e2e
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'yarn'
+    - name: Running mongodb service
+      run: |
+        docker-compose up -d mongodb
+        docker ps -a
+    - name: Running e2e testing
+      run: yarn test:e2e
