--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -6,6 +6,14 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  RUST_BACKTRACE: 1
+  CARGO_TERM_COLOR: always
+  APP_ENV: development
+  APP_MONGO_USER: test
+  APP_MONGO_PASS: password
+  APP_MONGO_DB: test
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,6 +23,20 @@ jobs:
         node-version: [16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
+    services:
+      mongodb:
+        image: mongo
+        env:
+          MONGO_INITDB_ROOT_USERNAME: test
+          MONGO_INITDB_ROOT_PASSWORD: password
+          MONGO_INITDB_DATABASE: test
+        options: >-
+          --health-cmd mongo
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 27017:27017
 
     steps:
     - uses: actions/checkout@v3
@@ -23,9 +45,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
-    - name: Running mongodb service
-      run: |
-        docker-compose up -d mongodb
-        docker ps -a
+
     - name: Running e2e testing
       run: yarn test:e2e
