--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -36,7 +36,10 @@ jobs:
         mongodb-version: ${{ matrix.mongodb-version }}
         mongodb-port: 27017
         mongodb-username: camaral
-        mongodb-pwd: camaral1122        
+        mongodb-password: camaral1122  
+
+    - name: Install dependencies
+      run: yarn install --frozen-lockfile      
 
     - name: Running e2e testing
       run: yarn test:e2e
