Connect with microservice for auth

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -36,7 +36,7 @@ jobs:
       with:
         mongodb-version: ${{ matrix.mongodb-version }}
         mongodb-port: 27017
-        mongodb-database: dbprog-nest-api
+        mongodb-db: dbprog-nest-api
         #mongodb-username: camaral
         #mongodb-password: camaral1122  
 
