--- a/package.json
+++ b/package.json
@@ -23,33 +23,36 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/microservices": "^9.2.0",
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.0",
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv-extended": "^2.9.0",
     "dotenv-parse-variables": "^2.0.0",
     "helmet": "^6.0.0",
     "mongodb-memory-server": "^8.9.1",
-    "mongoose": "^6.5.2",
+    "mongoose": "^6.6.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "@types/winston": "^2.4.4",
-    "@types/helmet": "^4.0.0",
     "@faker-js/faker": "^7.6.0",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/dotenv-parse-variables": "^2.0.1",
     "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
     "@types/jest": "28.1.4",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
